log/build_2023-01-31_19-59-07/py_pubsub/stderr.log
  File "/home/dunto/demo_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 122
    upKey.rect.y = centery - arrow Width - arrowSeperation
                                   ^
SyntaxError: invalid syntax

